# libembedded

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  filter.cpp  filter_fixed_point.cpp
include/embedded/: circular_buffer_adapter.h  config.h  constexpr_math.h  function.h  move_wrapper.h  mutex.h  ostream_ops.h  preprocessor.h  type_traits.h  typelist.h  variant.h  varint.h
include/embedded/constexpr_math/: complex.h  constants.h  convolve.h  functions.h  poly.h  vector.h
include/embedded/detail/: circular_buffer_adapter.h
include/embedded/signal/: bessel.h  butterworth.h  chebyshev.h  debug_filter_coefs.h  filter.h  poly.h  sos.h
include/embedded/signal/detail/: bessel_poles.h  debug_filter_coefs.h  filter.h
include/embedded/type_traits/: conjunction.h  is_invocable.h
include/embedded/utility/: integer_sequence.h
scripts/: gen-bessel-poles.py  gen-signal-tests.py  parse-filter-coefs.py  soak.sh
tests/: CMakeLists.txt  CMakeLists.txt.gtest  circular_buffer_adapter.cpp  constexpr_complex.cpp  constexpr_convolve.cpp  constexpr_vector.cpp  function.cpp  integer_sequence.cpp  lock_guard.cpp  move_wrapper.cpp  signal.cpp  signal_bessel_double.cpp  signal_bessel_float.cpp  signal_butter_double.cpp  signal_butter_float.cpp  signal_cheby1_double.cpp  signal_cheby1_float.cpp  signal_cheby2_double.cpp  signal_cheby2_float.cpp  test_util.h  typelist.cpp  varint.cpp
